# tinygen

./: README.md
compiler/: InstallLLVM.cmake  SetLLVMEnvironment.cmake
compiler/mlir/include/MemoryPlanner/: LivenessAnalysis.h  MemoryPlanner.h
compiler/mlir/lib/: TosaToEmitCPass.cpp
compiler/mlir/lib/MemoryPlanner/: TensorGraph.cpp  TensorNode.cpp
kernels/: model.h  tensor.h
kernels/cmsis-nn/: add_s8.cpp  avg_pool_2d.cpp  cmsis-nn.h  concat_axis3.cpp  conv2d_f3x3_s8.cpp  depthwise_conv2d_f3x3_s8.cpp  max_pool_2d.cpp  reshape_s8.cpp  transpose_conv2d_s1_s2_s8.cpp
kernels/cmsis-nn/src/ConvolutionFunctions/: CMakeLists.txt
kernels/reference/: cast.c  exp.c  maximum.c  mul_float.c  reference.h
projects/tinygen-ae/: .gitignore  CMakeLists.txt
projects/tinygen-ae/compiler/: CMakeLists.txt  main.cpp
projects/tinygen-ae/compiler/mlir/include/: Passes.h
projects/tinygen-ae/compiler/mlir/lib/: TosaToEmitCPass.cpp
projects/tinygen-ae/compiler/mlir/lib/MemoryPlanner/: LivenessAnalysis.cpp  MemoryPlanner.cpp
projects/tinygen-ae/kernels/cmsis-nn/: conv2d_f1x1_s1x1_s8.cpp  conv2d_f1x1_s8.cpp  conv2d_fnxm_s8.cpp  conv2d_fnxn_s8.cpp  pad_s8.cpp  transpose.cpp
projects/tinygen-ae/kernels/cmsis-nn/src/ConvolutionFunctions/: arm_nn_mat_mult_kernel_s8_s16.c
projects/tinygen-ae/kernels/reference/: add_float.c  reciprocal.c  reduce_max.c  reduce_sum.c  sub_float.c
projects/tinygen-ae/scripts/: copy_kernels.py  define_ops.py  kernels_optimization.py  main.py
scripts/: copy_kernels.py  define_ops.py  main.py
